# holiday-destination-finder

./: .gitignore  LOCAL_TEST_CHECKLIST.md  POLAND_SEARCH_VERIFICATION.md  README.md  SUPABASE_SETUP.md  TEST_RESULTS.md  amadeus_flight_offers_WRO_CTA_2026-01-06_2026-01-13.json  pyproject.toml  requirements.txt  supabase_migration.sql
data/: cities.csv  cities_local.csv  cities_web.csv
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: DateRangePicker.tsx  Header.tsx  PageFooter.tsx
frontend/app/contexts/: CurrencyContext.tsx  LanguageContext.tsx  ThemeContext.tsx
frontend/app/flight-loading/: page.tsx
frontend/lib/: airports.ts  api.ts  client-id.ts  country-flags.ts
scripts/: test_api.py  test_local.sh  test_search_local.sh
src/holiday_destination_finder/: airports.py  api.py  config.py  kv_queue.py  main.py  scoring.py  supabase.py  worker.py
src/holiday_destination_finder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/holiday_destination_finder/providers/: amadeus.py  openmeteo.py  ryanair_test.py  serpapi_test.py  serpapi_test_2.py  wizzair_test.py  wizzair_test_backup.py  wizzair_test_failed_SearchDates.py
